<resources>
    <string name="app_name">壹家</string>
    <string name="back_icon">&#060;</string>

    <string name="xy_online">小壹在线</string>
    <string name="xy_unonline">小壹离线</string>
    <string name="add_parents_robot_name">小壹机器人</string>

    <string name="robot_name">小壹</string>
    <string name="health_seft_test">健康自测</string>

    <string name="health_seft_main_warn">亲，点击下方按钮进行测量，小壹将通过你的指尖脉搏波来测量（心率、血氧）等结果</string>
    <string name="health_self_begin_warn">闪光灯和摄像头属于非专业的采集设备，建议您多次测量和观察</string>
    <string name="health_self_begin_button">开始测量</string>

    <string name="health_self_wait_text">%1$ds后为您开始测量</string>
    <string name="health_self_wait_warn">请您轻轻的将食指放在摄像头上，注意不要遮挡闪光灯，并保持姿势</string>
    <string name="health_self_mesure_error">手指未完全覆盖摄像头，请您调整手指位置</string>
    <string name="health_self_mesure_right">数据采集中，请保持姿势直到数据采集结束</string>
    <string name="health_self_mesuring">正在检测中...</string>
    <string name="health_self_result_warn">测量完成！本次测量结果不代表医学测量数据</string>

    <string name="health_self_result_close">返回</string>

    <string name="add_parents_title">请选择添加我的父母</string>

    <string name="add_own_parents">添加我的父母</string>

    <string name="add_parents_title_tip">创建围绕父母的家庭圈</string>

    <string name="add_parents_skip">跳过</string>

    <string name="add_parents_father">父亲</string>
    <string name="add_parents_mather">母亲</string>
    <string name="add_parents_name">名字：</string>
    <string name="add_parents_birth">生日：</string>
    <string name="add_parents_phone">手机号：</string>
    <string name="add_parents_relation">您与老人的关系：</string>
    <string name="add_parents_son">儿子</string>
    <string name="add_parents_dau">女儿</string>
    <string name="add_parents_father_info">父亲信息</string>
    <string name="add_parents_mather_info">母亲信息</string>

    <string name="add_parents_father_name_hint">请输入父亲姓名</string>
    <string name="add_parents_mather_name_hint">请输入母亲姓名</string>

    <string name="add_parents_father_birth_hint">请选择父亲生日</string>
    <string name="add_parents_mather_birth_hint">请选择母亲生日</string>

    <string name="add_parents_father_phone_hint">请输入父亲手机号</string>
    <string name="add_parents_mather_phone_hint">请输入母亲手机号</string>
    <string name="add_parents_done">完成</string>

    <string name="permission">权限</string>
    <string name="send_msg">发消息</string>
    <string name="send_call">打电话</string>
    <string name="user_detail_title">详情资料</string>
    <string name="user_detail_relation">与%1$s的关系</string>
    <string name="user_detail_own">本人</string>
    <string name="user_detail_creator">创建人</string>
    <string name="user_detail_protector">看护人</string>
    <string name="user_detail_no_permission">无权限</string>

    <string name="num_of_relation">%1$d位亲</string>

    <string name="phone_calling">正在呼叫...</string>

    <string name="get_data_error">用户信息获取失败，请稍后再试</string>

    <string name="delete_family_error">删除用户失败，请稍后再试</string>

    <string name="parent_has_not_confirm">对方还未确认接受邀请，请稍后再试</string>

    <string name="nick_name_cannot_be_null">昵称不能为空或者空格</string>

    <string-array name="robot_remind_voice_seek">
        <item>0</item>
        <item>20</item>
        <item>40</item>
        <item>60</item>
        <item>80</item>
        <item>100</item>
    </string-array>
    <string name="title_activity_shcalling">SHCallingActivity</string>
</resources>
