<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/main_background_default_f5">

    <include
        android:id="@+id/include"
        layout="@layout/include_edit_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include">

        <com.example.latte.ui.widget.RobotImageView
            android:id="@+id/user_detail_image"
            android:layout_width="68dp"
            android:layout_height="58dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="@id/cl_1"
            app:layout_constraintStart_toStartOf="@id/cl_1"
            app:layout_constraintTop_toTopOf="@id/cl_1"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/user_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/main_text_black_dark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_detail_image"
            app:layout_constraintTop_toTopOf="@id/user_detail_image"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/user_detail_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_text_black_dark"
            android:textSize="@dimen/sp_16"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/user_detail_image"
            app:layout_constraintStart_toStartOf="@id/user_detail_name"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_relation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_1">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/user_detail_relation_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_text_black_dark"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/cl_relation"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/user_detail_relation_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/COLOR_999999"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/cl_relation"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_permisson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_relation">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/user_detail_permission_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission"
            android:textColor="@color/main_text_black_dark"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/cl_permisson"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/user_detail_permission_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/COLOR_999999"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/cl_permisson"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/user_detail_send_msg"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/send_msg"
        android:textColor="@color/text_FDBA63"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_permisson"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/user_detail_send_call"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/send_call"
        android:textColor="@color/text_FDBA63"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_detail_send_msg"/>

</android.support.constraint.ConstraintLayout>